Add private playSong function & documentation for undcoumented attributes & functions in SongPlayer service

--- a/app/templates/album.html
+++ b/app/templates/album.html
@@ -22,3 +22,7 @@
      </table>
  </main>
  <ng-include src="'/templates/player_bar.html'"></ng-include>
+
+ <!-- how is song.playing referenced? where is the .playing coming from?
+    song.playing is also used in SongPlayer.js
+ -->
