--- a/app/templates/player_bar.html
+++ b/app/templates/player_bar.html
@@ -8,22 +8,22 @@
         <i class="fa fa-play" ng-show='!playerBar.songPlayer.currentSong.playing' ng-click="playerBar.songPlayer.play(song)"></i>
         <i class="fa fa-pause" ng-show='playerBar.songPlayer.currentSong.playing' ng-click="playerBar.songPlayer.pause(song)"></i>
       </a>
-      <a class='next'>
+      <a class='next' ng-click="playerBar.songPlayer.next()">
         <i class="fa fa-forward"></i>
          </a>
     </div>
     <div class="control-group currently-playing">
-      <h2 class="song-name"></h2>
+      <h2 class="song-name">{{playerBar.songPlayer.currentSong.title}}</h2>
       <div class="seek-control">
         <div class="seek-bar">
           <div class="fill"></div>
           <div class="thumb"></div>
         </div>
         <div class="current-time">-:--</div>
-        <div class="total-time">-:--</div>
+        <div class="total-time">{{playerBar.songPlayer.currentSong.duration}}</div>
       </div>
       <h2 class="artist-song-mobile">Song title-Artist Name</h2>
-      <h3 class="artist-name"></h3>
+      <h3 class="artist-name">{{playerBar.albumData.artist}}</h3>
     </div>
     <div class="control-group volume">
       <i class="fa fa-volume-up icon" aria-hidden="true"></i>
